# ExtraWork

./: CMakeLists.txt  ExtraWork.sln  README.md  index.html  params.json
Client/: Client.vcxproj  Client.vcxproj.filters  Main.cpp  Main.h
ExtraWork/: ExtraWork.cpp  ExtraWork.def  ExtraWork.filters  ExtraWork.h  ExtraWork.vcxproj  ExtraWork.vcxproj.filters
